fix header spacing

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,13 @@
-.header {
+.header-container {
+    width: 100vw;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 1rem;
-    max-width: 90vw;;
+    justify-content: center;
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2rem 1rem;
+        width: 80vw;
+    }
 }
