--- a/src/components/Headline/Headline.scss
+++ b/src/components/Headline/Headline.scss
@@ -5,7 +5,7 @@
 
     :first-child {
         text-align: center;
-        font-size: 2rem;
+        font-size: 1.5rem;
         gap: 3vh;
     }
 }
